// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test package info graph with 1 missing package information - SNAPSHOT 1`] = `
<div>
  <div
    className="bar-graph"
  >
    <div
      className="bar-graph-title"
    >
      package
    </div>
    <div
      className="bars-container"
    >
      <div
        className="bar-container"
      >
        <div
          aria-describedby={null}
          className="bar"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "backgroundColor": "#2B547E",
              "height": "100%",
              "marginTop": 0,
            }
          }
          title="Minified size: 15.20kB"
        />
      </div>
      <div
        className="bar-container"
      >
        <div
          aria-describedby={null}
          className="bar"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "backgroundColor": "#659EC7",
              "height": "0.7893178977833323%",
              "marginTop": 0,
            }
          }
          title="Gzipped size: 120B"
        />
      </div>
    </div>
    <div
      className="bars-legend-container"
    >
      <div
        className="bar-legend"
      >
        1.0.1 (minified)
      </div>
      <div
        className="bar-legend"
      >
        1.0.1 (gzipped)
      </div>
    </div>
  </div>
  <div
    className="bar-graph-error"
  >
    An issue occurred while processing the following packages: package@1.0.2 (NpmError)
  </div>
</div>
`;

exports[`Test package info graph with 2 package information - SNAPSHOT 1`] = `
<div>
  <div
    className="bar-graph"
  >
    <div
      className="bar-graph-title"
    >
      package
    </div>
    <div
      className="bars-container"
    >
      <div
        className="bar-container"
      >
        <div
          aria-describedby={null}
          className="bar"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "backgroundColor": "#2B547E",
              "height": "0.009986783064441788%",
              "marginTop": 0,
            }
          }
          title="Minified size: 15.20kB"
        />
      </div>
      <div
        className="bar-container"
      >
        <div
          aria-describedby={null}
          className="bar"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "backgroundColor": "#659EC7",
              "height": "0.00007882746614043377%",
              "marginTop": 0,
            }
          }
          title="Gzipped size: 120B"
        />
      </div>
      <div
        className="bar-container"
      >
        <div
          aria-describedby={null}
          className="bar"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "backgroundColor": "#2B547E",
              "height": "100%",
              "marginTop": 0,
            }
          }
          title="Minified size: 152.23MB"
        />
      </div>
      <div
        className="bar-container"
      >
        <div
          aria-describedby={null}
          className="bar"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "backgroundColor": "#659EC7",
              "height": "0.08034489486363712%",
              "marginTop": 0,
            }
          }
          title="Gzipped size: 122.31kB"
        />
      </div>
    </div>
    <div
      className="bars-legend-container"
    >
      <div
        className="bar-legend"
      >
        1.0.1 (minified)
      </div>
      <div
        className="bar-legend"
      >
        1.0.1 (gzipped)
      </div>
      <div
        className="bar-legend"
      >
        1.2.1 (minified)
      </div>
      <div
        className="bar-legend"
      >
        1.2.1 (gzipped)
      </div>
    </div>
  </div>
  
</div>
`;
